--- a/text.html
+++ b/text.html
@@ -61,7 +61,9 @@
             <img class="search-icon" src="images/search.svg" />
           </button>
           <input class="search-bar" type="text" placeholder="Search" />
-          <div class="notifications">notifications</div>
+          <button class="notifications">
+            <img class="notifications-icon" src="images/notifications.svg" />
+          </button>
           <div class="profile-picture">PFP</div>
           <div class="user-name">Morgan Oakley</div>
         </div>
@@ -159,43 +161,46 @@
                 enim ad minim veniam, quis nostrud...
               </p>
             </div>
+          </div>
 
-            <div class="trending">
+            <div class="trending-container">
               <p class="title">Trending</p>
-
-              <div class="trending-div">
-                <div class="profile-div">
-                  <div class="pfp" src=""></div>
-                  <div class="profile">
-                    <p>@teagan</p>
-                    <p>World Peace Builder</p>
+              <div class="trends">
+                <div class="trending-div">
+                  <div class="profile-div">
+                    <div class="pfp" src=""></div>
+                    <div class="profile">
+                      <p>@teagan</p>
+                      <p>World Peace Builder</p>
+                    </div>
                   </div>
-                </div>
-
-                <div class="profile-div">
-                  <div class="pfp" src=""></div>
-                  <div class="profile">
-                    <p>@tmorgan</p>
-                    <p>Super Cool Project</p>
+  
+                  <div class="profile-div">
+                    <div class="pfp" src=""></div>
+                    <div class="profile">
+                      <p>@tmorgan</p>
+                      <p>Super Cool Project</p>
+                    </div>
                   </div>
-                </div>
-
-                <div class="profile-div">
-                  <div class="pfp" src=""></div>
-                  <div class="profile">
-                    <p>@kendall</p>
-                    <p>Life Changing App</p>
+  
+                  <div class="profile-div">
+                    <div class="pfp" src=""></div>
+                    <div class="profile">
+                      <p>@kendall</p>
+                      <p>Life Changing App</p>
+                    </div>
                   </div>
-                </div>
-
-                <div class="profile-div">
-                  <div class="pfp" src=""></div>
-                  <div class="profile">
-                    <p>@alex</p>
-                    <p>No Traffic Maker</p>
+  
+                  <div class="profile-div">
+                    <div class="pfp" src=""></div>
+                    <div class="profile">
+                      <p>@alex</p>
+                      <p>No Traffic Maker</p>
+                    </div>
                   </div>
                 </div>
               </div>
+              
             </div>
           </div>
         </div>
