--- a/text.html
+++ b/text.html
@@ -11,7 +11,6 @@
   <body>
     <div class="container">
       <nav class="sidebar">
-        <!-- make as an ordered list -->
         <div class="dashboard">
           <img class="home" src="images/dashboard.png" />
           <div class="logo">Dashoboard</div>
@@ -60,46 +59,13 @@
         </div>
       </nav>
 
-      <header class="header">
-        <div class="header-top">
-          <div class="search">
-            <button class="search-button">
-              <img class="search-icon" src="images/search.svg" />
-            </button>
-            <input class="search-bar" type="text" placeholder="Search" />
-          </div>
-          <div class="user-buttons">
-            <button class="notifications">
-              <img class="notifications-icon" src="images/notifications.svg" />
-            </button>
-            <div class="profile-picture">
-              <img class="garfield" src="images/garfield.png" />
-            </div>
-            <div class="user-name">Garfield The Cat</div>
-          </div>
-        </div>
+      <header class="header">test</header>
 
-        <div class="header-bottom">
-          <img class="garfield" src="images/garfield.png" />
-          <div class="profile-name">
-            <div class="greeting">Happy Monday,</div>
-            <div class="user-name">Garfield (@lasagna-lover)</div>
-          </div>
-
-          <div class="header-buttons">
-            <button class="new">New</button>
-            <button class="upload">Upload</button>
-            <button class="share">Share</button>
-          </div>
-        </div>
-      </header>
-
-      <div class="Projects">
+      <div class="projects">
         <h3 class="your-projects">Your Projects</h3>
 
-        <div class="projects-container1">
+        <div class="projects-container">
           <div class="card">
-            <div class="empty"></div>
             <h4 class="title">Super Cool Project</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -112,10 +78,8 @@
               <img class="fork" src="images/source-fork.png" />
             </div>
           </div>
-
           <div class="card">
-            <div class="empty"></div>
-            <p class="title">Impossible App</p>
+            <h4 class="title">Super Cool Project</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -127,10 +91,8 @@
               <img class="fork" src="images/source-fork.png" />
             </div>
           </div>
-
           <div class="card">
-            <div class="empty"></div>
-            <p class="title">Add Blocker</p>
+            <h4 class="title">Super Cool Project</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -142,12 +104,8 @@
               <img class="fork" src="images/source-fork.png" />
             </div>
           </div>
-        </div>
-
-        <div class="projects-container2">
           <div class="card">
-            <div class="empty"></div>
-            <p class="title">Less Cool Project</p>
+            <h4 class="title">Super Cool Project</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -159,10 +117,8 @@
               <img class="fork" src="images/source-fork.png" />
             </div>
           </div>
-
           <div class="card">
-            <div class="empty"></div>
-            <p class="title">Easy Peasy App</p>
+            <h4 class="title">Super Cool Project</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -174,10 +130,8 @@
               <img class="fork" src="images/source-fork.png" />
             </div>
           </div>
-
           <div class="card">
-            <div class="empty"></div>
-            <p class="title">Money Maker</p>
+            <h4 class="title">Super Cool Project</h4>
             <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -190,70 +144,64 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="right-column">
         <h3 class="announcements">Announcements</h3>
+        <div class="announcements-grid">
+          <div class="side-card">
+            <h4 class="social-title">Site Maintenance</h4>
+            <p class="social-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do ..
+            </p>
+          </div>
+          <div class="side-card">
+            <h4 class="social-title">Community Share Day</h4>
+            <p class="social-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut..
+            </p>
+          </div>
+          <div class="side-card">
+            <h4 class="social-title">Updated Privacy Policy</h4>
+            <p class="social-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut...
+            </p>
+          </div>
+        </div>
+
+        <h3 class="trending">Trending</h3>
         <div class="socials">
-          <div class="announcements-container">
-            <div class="side-card1">
-              <h4 class="social-title">Site Maintenance</h4>
-              <p class="social-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                ..
-              </p>
-            </div>
-            <div class="side-card2">
-              <h4 class="social-title">Community Share Day</h4>
-              <p class="social-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut..
-              </p>
-            </div>
-            <div class="side-card">
-              <h4 class="social-title">Updated Privacy Policy</h4>
-              <p class="social-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut...
-              </p>
+          <div class="profile-div">
+            <!-- <img class="pfp" src="images/jon.png"></img> -->
+            <div class="profile">
+              <p class="name">@Jon</p>
+              <p class="user-projects">World Peace Builder</p>
             </div>
           </div>
 
-            <div class="trending-container">
-              <h3 class="title-trending">Trending</h3>
-              <div class="trends">
-                <div class="trending-div">
-                  <div class="profile-div">
-                    <img class="pfp" src="images/jon.png"></img>
-                    <div class="profile">
-                      <p class="name">@Jon</p>
-                      <p class="user-projects">World Peace Builder</p>
-                    </div>
-                  </div>
-  
-                  <div class="profile-div">
-                    <img class="pfp" src="images/pooky.png" />
-                    <div class="profile">
-                      <p class="name">@Pooky</p>
-                      <p>Super Cool Project</p>
-                    </div>
-                  </div>
-  
-                  <div class="profile-div">
-                    <img class="pfp" src="images/arlene-modified(1).png" />
-                    <div class="profile">
-                      <p class="name">@Arlene</p>
-                      <p>Life Changing App</p>
-                    </div>
-                  </div>
-  
-                  <div class="profile-div">
-                    <img class="pfp" src="images/odie.png" />
-                    <div class="profile">
-                      <p class="name">Odie</p>
-                      <p>No Traffic Maker</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <div class="profile-div">
+            <!-- <img class="pfp" src="images/pooky.png" /> -->
+            <div class="profile">
+              <p class="name">@Pooky</p>
+              <p>Super Cool Project</p>
+            </div>
+          </div>
+
+          <div class="profile-div">
+            <!-- <img class="pfp" src="images/arlene-modified(1).png" /> -->
+            <div class="profile">
+              <p class="name">@Arlene</p>
+              <p>Life Changing App</p>
+            </div>
+          </div>
+
+          <div class="profile-div">
+            <!-- <img class="pfp" src="images/odie.png" /> -->
+            <div class="profile">
+              <p class="name">Odie</p>
+              <p>No Traffic Maker</p>
             </div>
           </div>
         </div>
